--- a/frontend/src/app/login/homepage/homepage.component.html
+++ b/frontend/src/app/login/homepage/homepage.component.html
@@ -18,7 +18,10 @@
           <li class="nav-item">
               <a class="nav-link" *ngIf="admin "  routerLink="/employeeData" routerLinkActive="active" style="color:black;background-color: white;" > Employee</a>
             </li> 
-            <button (click)=logout() routerLink='/login'  style="position: absolute; right: 0;margin-right: 25px;">logout</button>
+            <li class="nav-item">
+                <a class="nav-link" *ngIf="admin || trainer || grad"  routerLink="/currentUser" routerLinkActive="active" style="color:black;background-color: white;" > profile</a>
+              </li> 
+          <button (click)=logout() routerLink='/login'  style="position: absolute; right: 0;margin-right: 25px;">logout</button>
       </ul>      
     </div>
   </div>  
